assets/sass/dashboard.scss
/* ... */
.helpVideoList {
    width: 100%;
    flex: 0 0 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #F2F2F2;
    overflow: scroll;
    figure {
        margin-bottom: 20px;
        iframe {
            width: 100%;
            height: inherit;
            margin-bottom: 20px;
        }
        figcaption {
            font-family: "Lato", sans-serif;
            color: $darkGray;
            width: 80%;
            font-size: 15px;
            margin-bottom: 20px;
            margin-left: auto;
            margin-right: auto;
            font-style: italic;
        }
    }
    ol {
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding-bottom: 20px;
        flex: 1 0 auto;
        li {
            font-family: "Lato", sans-serif;
            color: $darkGray;
            display: flex;
            align-items: center;
            flex-direction: row;
            justify-content: space-between;
            line-height: 1;
            width: 80%;
            margin-bottom: 20px;
            p {
                font-family: "Lato", sans-serif;
                color: $darkGray;
                font-size: 17px;
                max-width: 380px;
                cursor: pointer;
            }
            span {
                font-size: 13px;
                padding-left: 50px;
                color: lighten($darkGray, 30%);
            }
        }
    }
}
.currentlyPlaying,
.finished {
    position: relative;
    &::before {
        content: '';
        position: absolute;
        height: 20px;
        width: 20px;
        top: 50%;
        transform: translateY(-50%);
        left: -35px;
        background-size: 100% auto;
        background-repeat: no-repeat;
        background-position: center center;
    }
}
.finished {
    text-decoration: line-through;
    &::before {
        background-image: url("../images/checkmark.svg");
    }
    span {
        display: none;
    }
}
.currentlyPlaying {
    font-weight: bold;
    &::before {
        background-image: url("../images/play.svg");
        background-size: auto 100%;
    }
}
.time {
    font-size: 15px;
    margin-left: 75px;
    text-decoration: none;
}
.dashboard {
    width: 100%;
    flex: 1 1 auto;
    padding-top: 20px;
    padding-left: 75px;
    overflow: scroll;
    h1 {
        font-family: 'Open sans', sans-serif;
        color: $darkGray;
        font-size: 35px;
        display: inline;
    }
    h2 {
        font-family: 'Open sans', sans-serif;
        color: $darkGray;
        margin-top: 10px;
    }
    hr {
        margin-bottom: 10px;
        margin-left: 25px;
        border: $mainButton 1px solid;
        width: 60%;
        display: inline-block;
    }
}
.mainContent {
    display: flex;
    flex-direction: row;
    height: calc(100% - 75px);
}
.myStore {
    display: flex;
    flex-direction: row;
    margin-top: 30px;
    margin-bottom: 20px;
    .myStoreLeft {
        width: 50%;
        flex: 0 0 auto;
        p {
            margin-top: 20px;
            width: 320px;
            font-family: 'Lato', sans-serif;
            font-size: 15px;
            color: $darkGray;
        }
    }
    .myStoreRight {
        width: 50%;
        flex: 0 0 auto;
    }
    section {
        flex-direction: row;
    }
}
.goShopping {
    display: flex;
    flex-direction: row;
    margin-top: 30px;
    margin-bottom: 10px;
    justify-content: space-between;
    div {
        flex: 0 0 50%;
        h3 {
            font-family: "Open Sans", sans-serif;
            color: $darkGray;
            font-size: 20px;
        }
        h4 {
            font-family: "Open Sans", sans-serif;
            color: $darkGray;
            font-size: 15px;
            font-weight: 600;
            font-style: italic;
        }
    }
    p {
        margin-top: 20px;
        width: 75%;
        font-family: 'Lato', sans-serif;
        font-size: 15px;
        color: $darkGray;
    }
    .personaButtons {
        display: flex;
        flex-direction: row;
        a:nth-child(4) {
            button {
                font-size: 10px;
                padding-left: 8px;
            }
        }
    }
}
#video {
    position: relative;
    height: 0;
    width: 100%;
    padding-top: 56.35%;
    margin-bottom: 20px;
    iframe {
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
    }
}
@media screen and (max-width:1300px) {}
// BUTTONS
.button {
    background-color: $mainButton;
    color: white;
    font-family: 'Open Sans', sans-serif;
    height: 50px;
    width: 300px;
    border-radius: 0.07in;
    border: none;
    font-size: 25px;
    font-weight: 700;
    text-align: left;
    padding-left: 25px;
    cursor: pointer;
    text-decoration: none;
}
.button:hover {
    background-color: $mainButtonDark;
}
.btnStore {
    margin-bottom: 20px;
    height: 40px;
    font-size: 20px;
}
.persona {
    background-color: $personaOne;
    text-align: left;
    height: 78px;
    width: 300px;
    border-radius: 0.1in;
    padding-left: 25px;
    display: flex;
    h3 {
        font-size: 27px;
        color: white;
        font-family: 'Open Sans', sans-serif;
        padding-top: 20px;
    }
    img {
        height: 68px;
        margin-top: 10px;
        margin-left: 25px;
    }
}
.personaSmall {
    background-color: $personaOne;
    margin-top: 30px;
    margin-right: 20px;
    height: 35px;
    width: 85px;
    font-size: 17px;
    padding-left: 20px;
}
.personaSmall.one:hover {
    background-color: $personaOneDark;
}
.personaSmall.two:hover {
    background-color: $personaTwoDark;
}
.one {
    background-color: $personaOne;
}
.two {
    background-color: $personaTwo;
}
.storeButtons {
    display: flex;
    flex-direction: row;
    button {
        width: 140px;
        margin-right: 20px;
        font-size: 15px;
    }
}
/* ... */

